# Django-Render-sample

./: .gitignore  build.sh  pyproject.toml  render.yaml  requirements.txt
app/: urls.py  views.py
app/management/commands/: superuser.py
app/static/css/: style.css
app/templates/app/: index.html
server/: settings.py  urls.py
