[tool.poetry]
name = "django-render-sample"
version = "0.1.0"
description = ""
authors = ["taku820801 <takuchanpower@gmail.com>"]
readme = "README.md"
packages = [{include = "django_render_sample"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
dj-database-url = "^2.0.0"
dj-static = "^0.0.6"
python-decouple = "^3.8"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.5.0"
asgiref = "^3.7.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
sqlparse = "^0.4.4"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
